name:                adventofcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/purcell/adventofcodeteam
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers >= 0.5
                     , mtl >= 2.2.1
                     , split >= 0.2
                     , parsec >= 3
                     , MissingH
  default-language:    Haskell2010
  other-modules:
    One
    Five

source-repository head
  type:     git
  location: https://github.com/purcell/adventofcodeteam
